--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-06-22 00:57+0200\n"
-"PO-Revision-Date: 2025-06-24 09:33+0200\n"
+"PO-Revision-Date: 2025-06-24 10:48+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -477,6 +477,17 @@ msgid ""
 "\\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +2 "
 "\\svg{attack_yellow} \\\\ +2 \\svg{defense_yellow}} \\end{tabularx} }"
 msgstr ""
+"\\hommtable[]{8}{ \\centering \\medskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}{\\origbronze[20]} "
+"\\renewcommand{\\silver}{\\origsilver[20]} \\renewcommand{\\golden}{\\origgolden[20]} "
+"\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
+"\\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Facile}} & \\darkcell{\\raisebox{-.2\\height}"
+"{\\silver} \\textbf{Normal}} & \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Difficle}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\ \\lightcell[1.8]{Pas de changement\\"
+"\\ additionnel} & \\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/"
+"hp.png}} 22} & \\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
+"30} & \\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ "
+"+2 \\svg{attack_yellow} \\\\ +2 \\svg{defense_yellow}} \\end{tabularx} }"
 
 #. type: wrapfigure
 #: clash/the_hunt.tex:219
@@ -484,6 +495,8 @@ msgid ""
 "{l}{0.3\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-0.2\\baselineskip\\relax]"
 "{\\framedimage[1.1\\linewidth]{\\art/crystal_dragon.jpg}}"
 msgstr ""
+"{l}{0.3\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-0.2\\baselineskip\\relax]"
+"{\\framedimage[1.1\\linewidth]{\\art/crystal_dragon.jpg}}"
 
 #. type: Plain text
 #: clash/the_hunt.tex:219
@@ -506,6 +519,22 @@ msgid ""
 "Crystal Dragon's health regeneration.  \\item The Crystal Dragon \\textit{retaliates twice} per battle "
 "Round.  \\end{itemize} }"
 msgstr ""
+"{ \\textbf{\\MakeUppercase{Boss: Dragon de Cristal}} \\medskip \\textit{Entièrement fait de cristal rouge "
+"et amené à la vie par magie, le Dragon de Cristal est littéralement semi transparent, éclairé en son "
+"centre par son cœur magique.  Utilisé fréquemment comme outil d'entrainement pour les jeunes chasseurs de "
+"dragons, les sorciers les créent aussi pour leur mue de cristal.  } \\medskip \\textbf{Combattre le "
+"Dragon de Cristal:} \\begin{enumerate} \\item Placez la Figurine/Carte du Dragon sur le Plateau de "
+"Combat.  Ignorez sa capacité.  \\item Placez deux Golems d'Or et deux Golems de Diamant sur le Plateau de "
+"Combat.  \\end{enumerate} \\medskip \\textbf{Règles:} \\begin{itemize} \\item Au début du Combat, "
+"vérifiez si un des Golems a été retiré au Tour précédent.  Si oui, placez un nouveau Golem d'or ou de "
+"Diamant au hasard sur la ligne arrière du Plateau.  \\item \\textit{Absorption de Golem:} Le Dragon peut "
+"absorber des Golems pour se régénérer.  Pendant son Tour, si le Dragon est adjacent à un Golem, il peut "
+"choisir de l'absorber pour retirer un nombre de \\svg{damage-red} en fonction du type de Golem: "
+"\\begin{itemize} \\item Golem d'Or: Retirez 2 \\svg{damage-red}.  \\item Golem de Diamant: Retirez 4 "
+"\\svg{damage-red}.  \\item[] \\textbf{Note:} Le Dragon ne peut absorber qu'un Golem par Tour.  "
+"\\end{itemize} \\item Capacités de Golem: Les Golems d'Or et de Diamant n'ont pas d'autres capacités que "
+"celle de leurs Cartes.  Ils servent principalement de sacrifice pour la régénération du Dragon.  \\item "
+"Le Dragon \\textit{riposte deux fois} par Tour de Combat.  \\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:246
@@ -523,6 +552,18 @@ msgid ""
 "hp.png}} 32 \\\\ +1 Retaliation \\\\ Remove additional 2 \\svg{damage-table} by consuming Golems} \\\\ "
 "\\end{tabularx} }"
 msgstr ""
+"\\hommtable[]{10}{ \\centering \\medskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}{\\origbronze[20]} "
+"\\renewcommand{\\silver}{\\origsilver[20]} \\renewcommand{\\golden}{\\origgolden[20]} "
+"\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
+"\\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Facile}} & \\darkcell{\\raisebox{-.2\\height}"
+"{\\silver} \\textbf{Normal}} & \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Difficile}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\ \\lightcell[2.8]{ Pas de "
+"changement\\\\ additionnel} & \\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+"{\\images/hp.png}} 22} & \\lightcell[2.8]{{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+"{\\images/hp.png}} 26 \\\\ +1 Riposte}} & \\lightcell[2.8]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 32 \\\\ +1 Riposte \\\\ Retirez 2 \\svg{damage-table} "
+"supplémentaire par absorption} \\\\ \\end{tabularx} }"
 
 #. type: wrapfigure
 #: clash/the_hunt.tex:287
@@ -530,6 +571,8 @@ msgid ""
 "{l}{0.3\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-1.2\\baselineskip\\relax]"
 "{\\framedimage[1.1\\linewidth]{\\art/rust_dragon.jpg}}"
 msgstr ""
+"{l}{0.3\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-1.2\\baselineskip\\relax]"
+"{\\framedimage[1.1\\linewidth]{\\art/rust_dragon.jpg}}"
 
 #. type: Plain text
 #: clash/the_hunt.tex:287
