--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-06-22 00:57+0200\n"
-"PO-Revision-Date: 2025-06-24 10:48+0200\n"
+"PO-Revision-Date: 2025-06-24 12:17+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -594,6 +594,23 @@ msgid ""
 "attack.  Place a spare Faction Cube on the Unit's Card to indicate this effect.  Corrosion stacks up to "
 "-4 \\svg{defense}.  \\end{itemize} }"
 msgstr ""
+"{ \\textbf{\\MakeUppercase{Boss: Dragon de Rouille {\\scriptsize Nécessite l'Extension Forteresse}}} "
+"\\medskip \\textit{Les Dragons de Rouille sont connus pour chasser les Gorgones, habite et se nourrissent "
+"dans les Mines de souffre.  Avec cet appétit, les dragons de Rouille crache un acide concentré comme "
+"attaque principale.  Cet acide est capable de ronger même la plus dure des armures, abaissant les "
+"défenses de leur cible tout en faisant des dégâts.  } \\medskip \\textbf{Combattre le Dragon de Rouille:} "
+"\\begin{enumerate} \\item Placez la Figurine ou la Carte sur le Plateau de Combat.  Ignorez sa capacité.  "
+"\\item Préparez  quatre Cartes non utilisé pour marquer les mares d'acide.  \\end{enumerate} \\medskip "
+"\\textbf{Règles:} \\begin{itemize} \\item Le Dragon est immunisé aux Sorts Basiques.  \\item "
+"\\textit{Crachat Corrosif:} Le Dragon a une puissante capacité de contrôle de foule qui permet de cracher "
+"quatre mares d'acide sulfurique sur le Plateau de Combat \\textit{au début} de chaque Tour de Combat.  "
+"Utilisez les Cartes face cachée pour marquer la position des mares.  \\item Le Dragon ne peut pas placer "
+"de mares sur la même Case qu'au Tour précédent.  Marquez les cases précédentes avec des Cubes de Faction "
+"non utilisés.  \\item Les mares bloquent la case et entravent les mouvement pour le Tour.  Ce sont des "
+"obstacles pour les Joueurs et le Dragon.  \\item La capacité passive du Dragon, \\textit{Corrosion}, "
+"diminue la défense d'une Unité de 2 pour chaque attaque.  Placez un Cube de Faction non utilisé sur la "
+"Carte de l'Unité pour marquer cet effet.  La Corrosion s'empile jusqu'à -4 \\svg{defense}.  "
+"\\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:314
@@ -610,6 +627,17 @@ msgid ""
 "\\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to "
 "Corrosion armor decrease} \\\\ \\end{tabularx} }"
 msgstr ""
+"\\hommtable[]{9}{ \\centering \\medskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}{\\origbronze[20]} "
+"\\renewcommand{\\silver}{\\origsilver[20]} \\renewcommand{\\golden}{\\origgolden[20]} "
+"\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
+"\\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Facile}} & \\darkcell{\\raisebox{-.2\\height}"
+"{\\silver} \\textbf{Normal}} & \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Difficle}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\ \\lightcell[2.5]{Pas de Changement\\"
+"\\ additionnel} & \\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/"
+"hp.png}} 20} & \\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
+"32} & \\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ "
+"+1 à la diminution de défense de Corrosion} \\\\ \\end{tabularx} }"
 
 #. type: wrapfigure
 #: clash/the_hunt.tex:363
@@ -617,6 +645,8 @@ msgid ""
 "{l}{0.28\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-0.2\\baselineskip\\relax]"
 "{\\framedimage[1.1\\linewidth]{\\art/faerie_dragon.jpg}}"
 msgstr ""
+"{l}{0.28\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-0.2\\baselineskip\\relax]"
+"{\\framedimage[1.1\\linewidth]{\\art/faerie_dragon.jpg}}"
 
 #. type: Plain text
 #: clash/the_hunt.tex:363
@@ -642,6 +672,26 @@ msgid ""
 "3rd, and 4th Dendroids.  When there are no Dendroids left, the dragon loses the ability to cast Spells.  "
 "\\end{itemize} }"
 msgstr ""
+"{ \\textbf{\\MakeUppercase{Boss: Dragon Féérique {\\scriptsize Nécessite l'Extension Rempart}}} \\medskip "
+"\\textit{Les Dragons Féériques sont faussement mignons, mais en vérité, ce sont de méchants farceurs.  "
+"Peu de choses sont connus sur ces fauteurs de troubles notoires.  Ce que l'on sait se trouve plus dans "
+"des livres de contes que des livres magiques.  Certains les pensent invisibles.  Certains pensent qu'ils "
+"lancent des Sorts.  Certains pensent que Miroir Magique est une de leur défense naturelle.  } \\medskip "
+"\\textbf{Combattre le Dragon Féérique:} \\begin{enumerate} \\item Place 2 Dragons Féériques sur le "
+"Plateau de Combat.  Ignorez leur capacité.  \\item Placez 1 Carte de Sylvanien du Deck d'Unité Neutre "
+"\\svg{silver} sur le Plateau, et placez 3 Cartes supplémentaires face cachée pour représenter 3 autres "
+"Sylvaniens.  \\end{enumerate} \\medskip \\textbf{Règles:} \\begin{itemize} \\item Le Dragon est immunisé "
+"aux Sorts basiques.  \\item Le Dragon peut lancer jusque deux Sort différents par Tour de Combat.  \\item "
+"Chaque Sort est posé face visible à côté du Plateau de Combat: \\begin{enumerate} \\item Le 1er Sort est "
+"\\textit{Eclair}.  \\item Le 2ème Sort est \\textit{Soin}.  \\item Pour le 3ème Sort, le Dragon prend au "
+"hasard un Sort Expert du Deck de Sort, en excluant les Sorts \\svg{map}.  Si un Sort \\svg{map} est "
+"pioché, piochez un autre Sort.  \\end{enumerate} \\item \\textit{Farceur:} Au premier Tour de Combat, le "
+"premier Dragon Féérique ciblé n'est qu'un simple Mirage.  Il inflige des dégâts, mais disparaît du "
+"Plateau à la première touche ennemie.  \\item Capacité des Sylvaniens: Chaque Sylvanien possède une "
+"partie du pouvoir du Dragon Féérique.  A la mort du 2ème Sylvanien, retirez un Sort du Grimoire du "
+"Dragon, en commençant par le 3ème.  Diminuer la Puissance des Sort de 1 \\svg{empower} (en commençant par "
+"le maximum) en vainquant le 2ème, 3ème et 4ème Sylvanien.  Sans Sylvanien, le Dragon perd sa capacité à "
+"lancer des Sorts.  \\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:389
@@ -658,3 +708,14 @@ msgid ""
 "\\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 32 \\\\ +1 "
 "Mirage} \\\\ \\end{tabularx} }"
 msgstr ""
+"\\hommtable[]{7}{ \\centering \\medskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}{\\origbronze[20]} "
+"\\renewcommand{\\silver}{\\origsilver[20]} \\renewcommand{\\golden}{\\origgolden[20]} "
+"\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
+"\\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Facile}} & \\darkcell{\\raisebox{-.2\\height}"
+"{\\silver} \\textbf{Normal}} & \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Difficile}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\ \\lightcell[1.6]{Pas de changement\\"
+"\\ additionnel} & \\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/"
+"hp.png}} 18} & \\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
+"26} & \\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 32 \\\\ "
+"+1 Mirage} \\\\ \\end{tabularx} }"
