--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -445,10 +445,10 @@ msgid ""
 "Spells cast against it.  \\item Buffs and enhancements cast on player's Units remain effective.  "
 "\\end{itemize} }"
 msgstr ""
-"{ \\textbf{\\MakeUppercase{Boss: Dragon Azure}} \\medskip \\textit{On ne sait que peu de chose sur le "
+"{ \\textbf{\\MakeUppercase{Boss: Dragon Azure}} \\par \\medskip \\textit{On ne sait que peu de chose sur le "
 "Dragon Azure.  Il est rare et puissant, peu en ont vu et encore moins ont survécu à son attaque.  Cet "
 "puissante créature n'est pas plus grande que la plupart des dragons, mais peut subir de longues attaques "
-"physiques.  On dit que se trouver face à face avec un Dragon Azure, c'est être glacé de peur.  } "
+"physiques.  On dit que se trouver face à face avec un Dragon Azure, c'est être glacé de peur.  } \\par"
 "\\medskip \\textbf{Combattre le Dragon Azure:} \\begin{enumerate} \\item Placez la Figurine/Carte du "
 "Dragon Azure sur le Plateau de Combat.  Ignorez sa capacité.  \\item Préparez une pile d'Artefacts "
 "défaussés et mélangez-la.  \\end{enumerate} \\medskip \\textbf{Règles:} \\begin{itemize} \\item "
@@ -564,6 +564,7 @@ msgstr ""
 "{\\images/hp.png}} 26 \\\\ +1 Riposte}} & \\lightcell[2.8]{\\raisebox{-.25\\height}"
 "{\\includegraphics[height=15px]{\\images/hp.png}} 32 \\\\ +1 Riposte \\\\ Retirez 2 \\svg{damage-table} "
 "supplémentaire par absorption} \\\\ \\end{tabularx} }"
+"\\pagebreak"
 
 #. type: wrapfigure
 #: clash/the_hunt.tex:287
