--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -519,10 +519,10 @@ msgid ""
 "Crystal Dragon's health regeneration.  \\item The Crystal Dragon \\textit{retaliates twice} per battle "
 "Round.  \\end{itemize} }"
 msgstr ""
-"{ \\textbf{\\MakeUppercase{Boss: Dragon de Cristal}} \\medskip \\textit{Entièrement fait de cristal rouge "
+"{ \\textbf{\\MakeUppercase{Boss: Dragon de Cristal}} \\par \\medskip \\textit{Entièrement fait de cristal rouge "
 "et amené à la vie par magie, le Dragon de Cristal est littéralement semi transparent, éclairé en son "
 "centre par son cœur magique.  Utilisé fréquemment comme outil d'entrainement pour les jeunes chasseurs de "
-"dragons, les sorciers les créent aussi pour leur mue de cristal.  } \\medskip \\textbf{Combattre le "
+"dragons, les sorciers les créent aussi pour leur mue de cristal.  } \\par \\medskip \\textbf{Combattre le "
 "Dragon de Cristal:} \\begin{enumerate} \\item Placez la Figurine/Carte du Dragon sur le Plateau de "
 "Combat.  Ignorez sa capacité.  \\item Placez deux Golems d'Or et deux Golems de Diamant sur le Plateau de "
 "Combat.  \\end{enumerate} \\medskip \\textbf{Règles:} \\begin{itemize} \\item Au début du Combat, "
@@ -595,11 +595,11 @@ msgid ""
 "attack.  Place a spare Faction Cube on the Unit's Card to indicate this effect.  Corrosion stacks up to "
 "-4 \\svg{defense}.  \\end{itemize} }"
 msgstr ""
-"{ \\textbf{\\MakeUppercase{Boss: Dragon de Rouille {\\scriptsize Nécessite l'Extension Forteresse}}} "
+"{ \\textbf{\\MakeUppercase{Boss: Dragon de Rouille {\\scriptsize Extension Forteresse}}} \\par"
 "\\medskip \\textit{Les Dragons de Rouille sont connus pour chasser les Gorgones, habite et se nourrissent "
 "dans les Mines de souffre.  Avec cet appétit, les dragons de Rouille crache un acide concentré comme "
 "attaque principale.  Cet acide est capable de ronger même la plus dure des armures, abaissant les "
-"défenses de leur cible tout en faisant des dégâts.  } \\medskip \\textbf{Combattre le Dragon de Rouille:} "
+"défenses de leur cible tout en faisant des dégâts.  } \\par \\medskip \\textbf{Combattre le Dragon de Rouille:} "
 "\\begin{enumerate} \\item Placez la Figurine ou la Carte sur le Plateau de Combat.  Ignorez sa capacité.  "
 "\\item Préparez  quatre Cartes non utilisé pour marquer les mares d'acide.  \\end{enumerate} \\medskip "
 "\\textbf{Règles:} \\begin{itemize} \\item Le Dragon est immunisé aux Sorts Basiques.  \\item "
