--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -673,11 +673,11 @@ msgid ""
 "3rd, and 4th Dendroids.  When there are no Dendroids left, the dragon loses the ability to cast Spells.  "
 "\\end{itemize} }"
 msgstr ""
-"{ \\textbf{\\MakeUppercase{Boss: Dragon Féérique {\\scriptsize Nécessite l'Extension Rempart}}} \\medskip "
+"{ \\textbf{\\MakeUppercase{Boss: Dragon Féérique {\\scriptsize Extension Rempart}}} \\par \\medskip "
 "\\textit{Les Dragons Féériques sont faussement mignons, mais en vérité, ce sont de méchants farceurs.  "
 "Peu de choses sont connus sur ces fauteurs de troubles notoires.  Ce que l'on sait se trouve plus dans "
 "des livres de contes que des livres magiques.  Certains les pensent invisibles.  Certains pensent qu'ils "
-"lancent des Sorts.  Certains pensent que Miroir Magique est une de leur défense naturelle.  } \\medskip "
+"lancent des Sorts.  Certains pensent que Miroir Magique est une de leur défense naturelle.  } \\par \\medskip "
 "\\textbf{Combattre le Dragon Féérique:} \\begin{enumerate} \\item Place 2 Dragons Féériques sur le "
 "Plateau de Combat.  Ignorez leur capacité.  \\item Placez 1 Carte de Sylvanien du Deck d'Unité Neutre "
 "\\svg{silver} sur le Plateau, et placez 3 Cartes supplémentaires face cachée pour représenter 3 autres "
@@ -690,7 +690,7 @@ msgstr ""
 "premier Dragon Féérique ciblé n'est qu'un simple Mirage.  Il inflige des dégâts, mais disparaît du "
 "Plateau à la première touche ennemie.  \\item Capacité des Sylvaniens: Chaque Sylvanien possède une "
 "partie du pouvoir du Dragon Féérique.  A la mort du 2ème Sylvanien, retirez un Sort du Grimoire du "
-"Dragon, en commençant par le 3ème.  Diminuer la Puissance des Sort de 1 \\svg{empower} (en commençant par "
+"Dragon, en commençant par le 3ème.  Diminuer de 1 \\svg{empower} (en commençant par "
 "le maximum) en vainquant le 2ème, 3ème et 4ème Sylvanien.  Sans Sylvanien, le Dragon perd sa capacité à "
 "lancer des Sorts.  \\end{itemize} }"
 
