--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -682,8 +682,8 @@ msgstr ""
 "Plateau de Combat.  Ignorez leur capacité.  \\item Placez 1 Carte de Sylvanien du Deck d'Unité Neutre "
 "\\svg{silver} sur le Plateau, et placez 3 Cartes supplémentaires face cachée pour représenter 3 autres "
 "Sylvaniens.  \\end{enumerate} \\medskip \\textbf{Règles:} \\begin{itemize} \\item Le Dragon est immunisé "
-"aux Sorts basiques.  \\item Le Dragon peut lancer jusque deux Sort différents par Tour de Combat.  \\item "
-"Chaque Sort est posé face visible à côté du Plateau de Combat: \\begin{enumerate} \\item Le 1er Sort est "
+"aux Sorts basiques.  \\item Le Dragon peut lancer jusque deux Sort différents par Tour.  \\item "
+"Chaque Sort est placé face visible: \\begin{enumerate} \\item Le 1er Sort est "
 "\\textit{Eclair}.  \\item Le 2ème Sort est \\textit{Soin}.  \\item Pour le 3ème Sort, le Dragon prend au "
 "hasard un Sort Expert du Deck de Sort, en excluant les Sorts \\svg{map}.  Si un Sort \\svg{map} est "
 "pioché, piochez un autre Sort.  \\end{enumerate} \\item \\textit{Farceur:} Au premier Tour de Combat, le "
