de/what_to_play

--- a/main_de.tex
+++ b/main_de.tex
@@ -17,16 +17,16 @@
 \newcommand{\authortext}{Von der Gemeinschaft}
 \newcommand{\versionlabel}{Version}
 \newcommand{\versionwarning}{Dies ist eine unveröffentlichte Version auf GitHub}
-\newcommand{\documenttitle}{Heroes of Might \& Magic III Fan-Made Mission Book}
+\newcommand{\documenttitle}{Von Fans erstelltes Heroes of Might \& Magic III Missionsheft}
 
 \newcommand{\intro}{
-    Dies ist ein Gemeinschaft-Projekt, erreichbar über \hrefwithoutfootnote{\repourl}{GitHub repository}.
+    Dies ist ein Gemeinschaftsprojekt, erreichbar über \hrefwithoutfootnote{\repourl}{GitHub repository}.
     Jeder ist dazu eingeladen sich zu beteiligen, Veränderungen vorzunehmen und Fehler zu korrigieren.
 }
 \newcommand{\pageshorthand}{S.}
 
 \newcommand{\qrgithub}{Link zum \textbf{GitHub} Verzeichnis.}
 
-\title{\includegraphics[width=6cm]{\images/title.png}\\Fan-Erstelltes Missionsheft}
+\title{\includegraphics[width=6cm]{\images/title.png}\\Von Fans erstelltes Missionsheft}
 
 \input{metadata.tex}
