--- a/translations/dragoncurse_castle.tex/fr.po
+++ b/translations/dragoncurse_castle.tex/fr.po
@@ -325,7 +325,7 @@ msgstr ""
 "      \\item Placer le Héros Principal si il est battu.\n"
 "      \\item Transporter temporairement son armée, pour 8 \\svg{gold}, quand la Ville Aléatoire est attaquée.\n"
 "    \\end{itemize}\n"
-"  \\item Le premier Joueur à Visiter les Terres Désolées (après avoir battu les Unités  \\azure\\), piochez du Deck d'Unités Neutres \\azure\\ jusqu'à piocher un Dragon non associé à une Faction.\n"
+"  \\item Le premier Joueur à Visiter les Terres Désolées (après avoir battu les Unités  \\azure{}), piochez du Deck d'Unités Neutres \\azure\\ jusqu'à piocher un Dragon non associé à une Faction.\n"
 "    Le Joueur peut immédiatement le Recruter gratuitement.\n"
 "\\end{itemize}\n"
 "\n"
