--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -552,6 +552,7 @@ msgid ""
 "hp.png}} 32 \\\\ +1 Retaliation \\\\ Remove additional 2 \\svg{damage-table} by consuming Golems} \\\\ "
 "\\end{tabularx} }"
 msgstr ""
+"\\vspace{1em}\n"
 "\\hommtable[]{10}{ \\centering \\medskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
 "\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}{\\origbronze[20]} "
 "\\renewcommand{\\silver}{\\origsilver[20]} \\renewcommand{\\golden}{\\origgolden[20]} "
@@ -572,7 +573,7 @@ msgid ""
 "{l}{0.3\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-1.2\\baselineskip\\relax]"
 "{\\framedimage[1.1\\linewidth]{\\art/rust_dragon.jpg}}"
 msgstr ""
-"{l}{0.3\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-1.2\\baselineskip\\relax]"
+"{l}{0.3\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-0.2\\baselineskip\\relax]"
 "{\\framedimage[1.1\\linewidth]{\\art/rust_dragon.jpg}}"
 
 #. type: Plain text
@@ -646,7 +647,7 @@ msgid ""
 "{l}{0.28\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-0.2\\baselineskip\\relax]"
 "{\\framedimage[1.1\\linewidth]{\\art/faerie_dragon.jpg}}"
 msgstr ""
-"{l}{0.28\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-0.2\\baselineskip\\relax]"
+"{l}{0.28\\textwidth} \\raisebox{0pt}[\\dimexpr\\height-1.2\\baselineskip\\relax]"
 "{\\framedimage[1.1\\linewidth]{\\art/faerie_dragon.jpg}}"
 
 #. type: Plain text
