--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2025-06-21 22:58+0000\n"
-"PO-Revision-Date: 2025-06-24 20:40+0200\n"
+"PO-Revision-Date: 2025-06-24 21:18+0200\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-mission-"
 "book/coop-scenarios/sentinels/de/>\n"
@@ -186,7 +186,7 @@ msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
-"Jede Fraktion erhält zufällig 1 Nahes Gebiet (IV-V) und 1 Fernes Gebiet (II-III). Diese Gebiete sollten keine Obelisken enthalten.\n"
+"\\textbf{Gebietsvorrat:} Jede Fraktion erhält zufällig 1 Nahes Gebiet (IV-V) und 1 Fernes Gebiet (II-III). Diese Gebiete sollten keine Obelisken enthalten.\n"
 "\n"
 
 #. type: multicols
@@ -263,7 +263,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{Sieg}}\n"
 "\n"
 
 #. type: multicols
@@ -286,7 +286,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{NIederlagenbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{NIederlage}}\n"
 "\n"
 
 #. type: multicols
