--- a/translations/random_scenario.tex/pl.po
+++ b/translations/random_scenario.tex/pl.po
@@ -143,15 +143,12 @@ msgstr ""
 
 #. type: multicols
 #: sections/random_scenario.tex:15
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Scenario length}}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Type}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Długość Scenariusza}}\n"
+"\\subsection*{\\MakeUppercase{Typ Scenariusza}}\n"
 "\n"
 
 #. type: multicols
