--- a/translations/bloody_grail.tex/de.po
+++ b/translations/bloody_grail.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-06-21 22:58+0000\n"
+"POT-Creation-Date: 2025-06-25 09:26+0200\n"
 "PO-Revision-Date: 2025-06-23 13:02+0000\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -90,11 +90,11 @@ msgstr ""
 #. type: Plain text
 #: clash/bloody_grail.tex:3
 msgid ""
-"\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-grail."
-"png}"
+"\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-"
+"grail.png}"
 msgstr ""
-"\\addscenariosection{1}{Konfliktmodus}{Blutiger Gral}{\\images/bloody-grail."
-"png}"
+"\\addscenariosection{1}{Konfliktmodus}{Blutiger Gral}{\\images/bloody-"
+"grail.png}"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:7
