--- a/translations/inferno_steadwicks_fall.tex/de.po
+++ b/translations/inferno_steadwicks_fall.tex/de.po
@@ -116,7 +116,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{NIederlagenbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{Niederlagenbedingungen}}\n"
 "\n"
 
 #. type: multicols
