--- a/translations/title_page.tex/fr.po
+++ b/translations/title_page.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-21 22:58+0000\n"
+"POT-Creation-Date: 2025-06-25 09:26+0200\n"
 "PO-Revision-Date: 2025-05-15 08:02+0000\n"
 "Last-Translator: SkullsuiT <jfdswhaos@gmail.com>\n"
 "Language-Team: French <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -60,8 +60,8 @@ msgid ""
 "\\includesvg[height=0.1px]{\\svgs/azure.svg} \\includesvg[height=0.1px]"
 "{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
 "\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
-"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense_yellow."
-"svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
+"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/"
+"defense_yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
 msgstr ""
 "\\phantom{ \\includesvg[height=0.1px]{\\svgs/bronze.svg} "
 "\\includesvg[height=0.1px]{\\svgs/bronze.svg} \\includesvg[height=0.1px]"
@@ -69,5 +69,5 @@ msgstr ""
 "\\includesvg[height=0.1px]{\\svgs/azure.svg} \\includesvg[height=0.1px]"
 "{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
 "\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
-"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense_yellow."
-"svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
+"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/"
+"defense_yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
