--- a/translations/titans_stronghold.tex/titans_stronghold.tex.pot
+++ b/translations/titans_stronghold.tex/titans_stronghold.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-06-21 22:58+0000\n"
+"POT-Creation-Date: 2025-06-25 10:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -423,12 +423,12 @@ msgid ""
 "5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
 "6\\silver 6\\golden 4\\azure \\linebreak Then\\linebreak 3\\bronze 6\\silver "
 "6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden "
-"6\\azure \\linebreak Then\\linebreak 2\\bronze 6\\silver 8\\golden "
-"5\\azure}\\\\ \\darkcell[1.8]{6 players} & \\lightcell[1.8]{8\\bronze "
-"8\\silver 4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver "
-"5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden "
-"3\\azure \\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} "
-"& \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak "
+"6\\azure \\linebreak Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}"
+"\\\\ \\darkcell[1.8]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
+"4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver 5\\golden "
+"2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure "
+"\\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} & "
+"\\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak "
 "Then\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & \\lightcell[1.8]"
 "{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak Then\\linebreak "
 "3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ \\end{tabularx} }"
