--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-21 22:58+0000\n"
+"POT-Creation-Date: 2025-06-25 10:08+0000\n"
 "PO-Revision-Date: 2025-06-23 18:55+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -108,8 +108,8 @@ msgstr ""
 #. type: Plain text
 #: clash/bloody_grail.tex:3
 msgid ""
-"\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-grail."
-"png}"
+"\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-"
+"grail.png}"
 msgstr ""
 "\\addscenariosection{1}{Scénario Affrontement}{Graal Sanglant}{\\images/"
 "bloody-grail.png}"
