--- a/translations/bloody_grail.tex/pl.po
+++ b/translations/bloody_grail.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-21 22:58+0000\n"
+"POT-Creation-Date: 2025-06-25 10:08+0000\n"
 "PO-Revision-Date: 2024-10-29 23:06+0000\n"
 "Last-Translator: krazanas <krazi321@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -91,11 +91,11 @@ msgstr ""
 #. type: Plain text
 #: clash/bloody_grail.tex:3
 msgid ""
-"\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-grail."
-"png}"
+"\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-"
+"grail.png}"
 msgstr ""
-"\\addscenariosection{1}{Tryb Starcia}{Krwawy Graal}{\\images/bloody-grail."
-"png}"
+"\\addscenariosection{1}{Tryb Starcia}{Krwawy Graal}{\\images/bloody-"
+"grail.png}"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:7
