--- a/translations/emerald_island.tex/de.po
+++ b/translations/emerald_island.tex/de.po
@@ -83,11 +83,42 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:83
 #: campaigns/castle_greek_gift.tex:72 campaigns/castle_sicilian_dragon.tex:81
 #: campaigns/castle_two_knights_defense.tex:77
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Sieg}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
 "\n"
 
@@ -97,11 +128,33 @@ msgstr ""
 #: coops/stand_united.tex:56 campaigns/inferno_devilish_plan.tex:125
 #: campaigns/inferno_steadwicks_fall.tex:137
 #: campaigns/inferno_deal_with_the_devil.tex:87
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Niederlagenbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Niederlagenbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Niederlagenbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Niederlagenbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Niederlagenbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Niederlage}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Niederlagenbedingungen}}\n"
+"\n"
+"#-#-#-#-#  de.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Niederlagenbedingungen}}\n"
 "\n"
 
