--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2025-06-21 22:58+0000\n"
-"PO-Revision-Date: 2025-06-25 12:11+0200\n"
+"PO-Revision-Date: 2025-06-25 12:15+0200\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-mission-"
 "book/coop-scenarios/sentinels/de/>\n"
@@ -513,7 +513,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Combat with\\\\Enemy Armies}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Kampf gegen gegen\\\\feindliche Armeen}}\n"
+"\\subsection*{\\MakeUppercase{Kampf gegen\\\\feindliche Armeen}}\n"
 "\n"
 
 #. type: multicols
