--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2025-06-21 22:58+0000\n"
-"PO-Revision-Date: 2025-06-25 12:15+0200\n"
+"PO-Revision-Date: 2025-06-25 12:21+0200\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-mission-"
 "book/coop-scenarios/sentinels/de/>\n"
@@ -424,12 +424,12 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item Ignoriert alle gelben Linien auf Startgebieten.\n"
 "  \\item Spieler können Ressourcen tauschen, wenn ein Held des aktiven Spielers einen Handelsposten besucht oder benachbart zu einem verbündeten Helden steht.\n"
-"  \\item The Hero who defeats an enemy army gains 2 \\svg{experience}.\n"
-"    The victorious player rolls two Treasure Dice and resolves one of them.\n"
-"  \\item Additionally, no player can:\n"
+"  \\item Der Held, der eine feindliche Armee besiegt, erhält 2 \\svg{experience}.\n"
+"    Der siegreiche Spieler erhält 2 \\svg{treasure} Schatzwürfel und handelt einen davon ab.\n"
+"  \\item Zusätzlich kann kein Spieler:\n"
 "  \\begin{itemize}\n"
-"      \\item Attack other Heroes.\n"
-"      \\item Capture a Mine or Settlement that is already Flagged.\n"
+"      \\item Andere Helden attackieren.\n"
+"      \\item Eine bereits eingenommene Mine/Siedlung einnehmen.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
