--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2025-06-21 22:58+0000\n"
-"PO-Revision-Date: 2025-06-25 12:21+0200\n"
+"PO-Revision-Date: 2025-06-25 12:24+0200\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-mission-"
 "book/coop-scenarios/sentinels/de/>\n"
@@ -425,7 +425,7 @@ msgstr ""
 "  \\item Ignoriert alle gelben Linien auf Startgebieten.\n"
 "  \\item Spieler können Ressourcen tauschen, wenn ein Held des aktiven Spielers einen Handelsposten besucht oder benachbart zu einem verbündeten Helden steht.\n"
 "  \\item Der Held, der eine feindliche Armee besiegt, erhält 2 \\svg{experience}.\n"
-"    Der siegreiche Spieler erhält 2 \\svg{treasure} Schatzwürfel und handelt einen davon ab.\n"
+"    Der siegreiche Spieler erhält 2 Schatzwürfel und handelt einen davon ab.\n"
 "  \\item Zusätzlich kann kein Spieler:\n"
 "  \\begin{itemize}\n"
 "      \\item Andere Helden attackieren.\n"
