--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -7,15 +7,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2025-06-21 22:58+0000\n"
-"PO-Revision-Date: 2025-06-25 12:24+0200\n"
-"Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
-"Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-mission-"
-"book/coop-scenarios/sentinels/de/>\n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 3.6\n"
 
 #.  !TeX spellcheck = en_US
@@ -263,7 +261,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{Sieg}}\n"
 "\n"
 
 #. type: multicols
@@ -286,7 +284,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Niederlagenbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{Niederlagen}}\n"
 "\n"
 
 #. type: multicols
@@ -422,14 +420,14 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Ignoriert alle gelben Linien auf Startgebieten.\n"
-"  \\item Spieler können Ressourcen tauschen, wenn ein Held des aktiven Spielers einen Handelsposten besucht oder benachbart zu einem verbündeten Helden steht.\n"
-"  \\item Der Held, der eine feindliche Armee besiegt, erhält 2 \\svg{experience}.\n"
-"    Der siegreiche Spieler erhält 2 Schatzwürfel und handelt einen davon ab.\n"
-"  \\item Zusätzlich kann kein Spieler:\n"
+"  \\item Ignore all yellow borders on Starting Tiles.\n"
+"  \\item Players can trade resources when one of the active player's Heroes Visits a trading post or stands on a Field adjacent to an allied Hero.\n"
+"  \\item The Hero who defeats an enemy army gains 2 \\svg{experience}.\n"
+"    The victorious player rolls two Treasure Dice and resolves one of them.\n"
+"  \\item Additionally, no player can:\n"
 "  \\begin{itemize}\n"
-"      \\item Andere Helden attackieren.\n"
-"      \\item Eine bereits eingenommene Mine/Siedlung einnehmen.\n"
+"      \\item Attack other Heroes.\n"
+"      \\item Capture a Mine or Settlement that is already Flagged.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
