--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -217,7 +217,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Vorbereitung der Abenteuerkarte}}\n"
+"\\subsection*{\\MakeUppercase{Vorbereitung der Karte}}\n"
 "\n"
 
 #. type: multicols*
@@ -229,7 +229,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Nehmt die folgenden Gebiete und platziert sie wie in der Abbildung der Abenteuerkarte gezeigt:\n"
+"Nehmt die folgenden Gebiete und platziert sie wie in der Abbildung der Karte gezeigt:\n"
 "\n"
 
 #. type: multicols
@@ -284,7 +284,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Niederlagen}}\n"
+"\\subsection*{\\MakeUppercase{Niederlage}}\n"
 "\n"
 
 #. type: multicols
@@ -420,14 +420,14 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Ignore all yellow borders on Starting Tiles.\n"
-"  \\item Players can trade resources when one of the active player's Heroes Visits a trading post or stands on a Field adjacent to an allied Hero.\n"
-"  \\item The Hero who defeats an enemy army gains 2 \\svg{experience}.\n"
-"    The victorious player rolls two Treasure Dice and resolves one of them.\n"
-"  \\item Additionally, no player can:\n"
+"  \\item Ignoriert alle gelben Linien auf Startgebieten.\n"
+"  \\item Spieler können Ressourcen tauschen, wenn ein Held einen Handelsposten betritt oder auf einem zu einem verbündeten Helden angrenzenden Feld steht.\n"
+"  \\item Der Held, der eine feindliche Armee besiegt, erhält 2 \\svg{experience}.\n"
+"    Der Spieler wirft 2 \\svg{treasure} und handelt 1 davon ab.\n"
+"  \\item Außerdem können Spieler nicht:\n"
 "  \\begin{itemize}\n"
-"      \\item Attack other Heroes.\n"
-"      \\item Capture a Mine or Settlement that is already Flagged.\n"
+"      \\item Andere Helden angreifen.\n"
+"      \\item Minen oder Siedlungen einnehmen, die bereits eingenommen wurden.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
@@ -458,7 +458,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Feindliche Armeen werden auf einem zufälligen Feld mit Obelisk erschaffen (nehmt Heldenfiguren von nicht verwendeten Fraktionen)\n"
+"  \\item Feindliche Armeen werden auf einem zufälligen Obelisken erschaffen (nehmt nicht verwendete Heldenfiguren)\n"
 "  \\item Bestimmt das Feld, indem ihr solange 2 Angriffswürfel werft, bis keine 0 mehr erscheint:\n"
 "  \\begin{itemize}\n"
 "    \\item $+1$/$+1$ = Norden\n"
